syntax = "proto3";

package likechain.likenft;

option go_package = "github.com/likecoin/likechain/x/likenft/types";

message EventNewClass {
  string class_id = 1;
  string parent_iscn_id_prefix = 2;
  string parent_account = 3;
}

message EventUpdateClass {
  string class_id = 1;
  string parent_iscn_id_prefix = 2;
  string parent_account = 3;
}

message EventRevealClass {
  string class_id = 1;
  bool success = 2;
  string error = 3;
}

message EventMintNFT {
  string class_id = 1;
  string nft_id = 2;
  string owner = 3;
  string class_parent_iscn_id_prefix = 4;
  string class_parent_account = 5;
}

message EventBurnNFT {
  string class_id = 1;
  string nft_id = 2;
  string owner = 3;
  string class_parent_iscn_id_prefix = 4;
  string class_parent_account = 5;
}

message EventCreateMintableNFT {
  string class_id = 1;
  string mintable_nft_id = 2;
  string class_parent_iscn_id_prefix = 3;
  string class_parent_account = 4;
}

message EventUpdateMintableNFT {
  string class_id = 1;
  string mintable_nft_id = 2;
  string class_parent_iscn_id_prefix = 3;
  string class_parent_account = 4;
}

message EventDeleteMintableNFT {
  string class_id = 1;
  string mintable_nft_id = 2;
  string class_parent_iscn_id_prefix = 3;
  string class_parent_account = 4;
}

message EventCreateOffer {
  string class_id = 1;
  string nft_id = 2;
  string buyer = 3;
}

message EventUpdateOffer {
  string class_id = 1;
  string nft_id = 2;
  string buyer = 3;
}

message EventDeleteOffer {
  string class_id = 1;
  string nft_id = 2;
  string buyer = 3;
}
