syntax = "proto3";

package likechain.likenft;

import "gogoproto/gogo.proto";

option go_package = "github.com/likecoin/likechain/x/likenft/types";

message NFTInput {
  string uri = 1;
  string uri_hash = 2;
  bytes metadata = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "JsonInput"
  ];
}
